--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@misterzik/slim-navie",
-  "version": "1.0.1",
-  "description": "Slim-Navie JS is a light navigation web component driven by a configuration, Simplistic Navigation built on React.",
+  "version": "1.0.2",
+  "description": "Slim-NavieJS, also known as; Slim Navigation Expression, is a light navigation component driven by configurations, Achieving a Simple Navigation ready to use built on React.",
   "main": "/dist/index.js",
   "repository": {
     "type": "git",
@@ -13,8 +13,8 @@
     "build": "rollup -c"
   },
   "dependencies": {
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2"
+    "react": "^18.2.0",
+    "react-router-dom": "^6.4.2"
   },
   "devDependencies": {
   },
